--- a/entretien.html
+++ b/entretien.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-  <title>R'EXTENSE : pose d'extensions à gargenville</title>
+  <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:type" content="website" />
