--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="fr">
    <head>
-      <title>R'EXTENSE : pose d'extensions à gargenville</title>
-      <meta charset="utf-8">
+    <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
+    <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
