--- a/shampoings-soins.html
+++ b/shampoings-soins.html
@@ -1,185 +1,188 @@
 <!doctype html>
 <html lang="fr">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
-      <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
-      <meta name="og:description"
-         content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
-      <meta name="description"
-         content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
-      <meta name="robots" content="index,follow" />
-      <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
-      <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="fonts/icomoon/style.css">
-      <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-      <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesheet" href="css/owl.theme.default.min.css">
-      <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-      <link rel="stylesheet" href="css/aos.css">
-      <!-- MAIN CSS -->
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-      <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
-   </head>
-   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-      <div class="site-wrap" id="home-section">
-         <div class="site-mobile-menu site-navbar-target">
-            <div class="site-mobile-menu-header">
-               <div class="site-mobile-menu-close mt-3">
-                  <span class="icon-close2 js-menu-toggle"></span>
-               </div>
-            </div>
-            <div class="site-mobile-menu-body"></div>
-         </div>
-         <header class="site-navbar site-navbar-target" role="banner">
-            <div class="container">
-               <div class="row align-items-center position-relative">
-                  <div class="col-3 ">
-                     <div class="site-logo">
-                        <a href="index.html">R'EXTENSE</a>
-                     </div>
-                  </div>
-                  <div class="col-9  text-right">
-                     <span class="d-inline-block d-lg-none"><a href="#"
-                        class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span
-                        class="icon-menu h3 text-white"></span></a></span>
-                     <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
-                        <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                           <li><a href="index.html" class="nav-link">Home</a></li>
-                           <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
-                           <li class="active"><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
-                           <li><a href="entretien.html" class="nav-link">Entretien</a></li>
-                           <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
-                           <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
-                        </ul>
-                     </nav>
-                  </div>
-               </div>
-            </div>
-         </header>
-         <div class="ftco-blocks-cover-1">
-            <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
-               style="background-image: url('images/photo 2 entretenir les extensions.jpg')">
-               <div class="container">
-                  <div class="row align-items-center justify-content-center text-center">
-                     <div class="col-md-7">
-                        <h1 class="mb-3">QUELS SHAMPOINGS UTILISER POUR LES
-                           EXTENSIONS ?
-                        </h1>
-                        <p>Après avoir réalisé une pose d’extensions de cheveux, il est important d’appliquer une routine
-                           particulière pour en prendre soin.
-                        </p>
-                        <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
-                           vous</a>
-                        </p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="site-section">
-            <div class="container">
-               <div class="row justify-content-center mb-5">
-                  <div class="col-md-7 text-center">
-                     <h3 class="scissors text-center">POURQUOI CHOISIR UN BON SHAMPOING ?
-                     </h3>
-                     <p class="mb-5 lead">Il est conseillé d’appliquer des shampoings spécifiques pour les extensions de cheveux
-                        naturels. Cela permet d’augmenter la durée de vie de vos extensions. 
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <!-- END section -->
-         <div class="site-section bg-light">
-            <div class="container">
-               <div class="row justify-content-center  mb-5">
-                  <div class="col-md-7 text-center">
-                     <h3 class="scissors text-center">QUEL SHAMPOING UTILISER ?</h3>
-                     <p class="mb-5 lead">Les shampoings pour extensions de cheveux sont des shampoings neutres, ne contenant
-                        aucune molécule qui abîme les cheveux. Généralement, les shampoings pour extensions sont très doux car ils
-                        ne contiennent pas de silicone, ni de glycérine ou tous autres produits chimiques qui détruisent les
-                        cheveux.
-                     </p>
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-12"></div>
-               </div>
-            </div>
-         </div>
-         <div class="site-section section-3" data-stellar-background-ratio="0.5"
-            style="background-image: url('images/photo 3 quels shampoings.jpg');">
-            <div class="container">
-               <div class="row justify-content-center text-center">
-                  <div class="col-10 text-center mb-5">
-                     <h2 class="text-white scissors primary-color-icon text-center">COMMENT PRENDRE SOIN DE SES EXTENSIONS ?</h2>
-                     <p class="lead text-white mb-5">Il est recommandé d’utiliser un après-shampoing ainsi que des soins
-                        capillaires pour nourrir vos extensions. Dans l’idéal, il faudrait même utiliser des masques et sérum pour
-                        préserver vos extensions au maximum.
-                     </p>
-                     <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
-                        vous</a>
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="row justify-content-center mb-5">
-            <div class="col-md-7 text-center">
-               <h3 class="scissors text-center">CONCLUSION</h3>
-               <p class="mb-5 lead">Le choix du shampoing est une étape nécessaire pour prendre soin de vos extensions
-                  capillaires et garder leur éclat durablement. <br>
-                  Pensez également à entretenir vos extensions avec des soins, masques, huiles et sérum au minimum une fois par
-                  semaine.
-               </p>
-            </div>
-         </div>
-         <footer class="site-footer">
-            <div class="container">
-               <div class="row">
-                  <div class="col-lg-3">
-                     <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
-                     <h2 class="footer-heading mb-3">A propos de moi</h2>
-                     <p>Technicienne spécialiste des extensions de cheveux à froid.
-                        je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
-                        directement chez vous.
-                     </p>
-                  </div>
-                  <div class="col-lg-8 ml-auto">
-                     <div class="row">
-                        <div class="col-lg-6 ml-auto">
-                           <h2 class="footer-heading mb-4">Liens</h2>
-                           <ul class="list-unstyled">
-                              <li><a href="prestations-rdv.html">Contactez moi</a></li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-      </div>
-      </footer>
-      </div>
-      <script src="js/jquery-3.3.1.min.js"></script>
-      <script src="js/jquery-migrate-3.0.0.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="js/owl.carousel.min.js"></script>
-      <script src="js/jquery.sticky.js"></script>
-      <script src="js/jquery.waypoints.min.js"></script>
-      <script src="js/jquery.animateNumber.min.js"></script>
-      <script src="js/jquery.fancybox.min.js"></script>
-      <script src="js/jquery.stellar.min.js"></script>
-      <script src="js/jquery.easing.1.3.js"></script>
-      <script src="js/bootstrap-datepicker.min.js"></script>
-      <script src="js/aos.js"></script>
-      <script src="js/main.js"></script>
-   </body>
-</html>
 
+<head>
+  <title>R'EXTENSE : pose d'extensions cheveux à gargenville</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://krissdel.github.io/Rextense/" />
+  <meta property="og:image" content="https://krissdel.github.io/Rextense/images/logo.png" />
+  <meta name="og:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à clips non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://krissdel.github.io/Rextense/index.html" />
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="css/aos.css">
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
+</head>
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+  <div class="site-wrap" id="home-section">
+    <div class="site-mobile-menu site-navbar-target">
+      <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close mt-3">
+          <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+      </div>
+      <div class="site-mobile-menu-body"></div>
+    </div>
+    <header class="site-navbar site-navbar-target" role="banner">
+      <div class="container">
+        <div class="row align-items-center position-relative">
+          <div class="col-3 ">
+            <div class="site-logo">
+              <a href="index.html">R'EXTENSE</a>
+            </div>
+          </div>
+          <div class="col-9  text-right">
+            <span class="d-inline-block d-lg-none"><a href="#"
+                class="text-white site-menu-toggle js-menu-toggle py-5 text-white"><span
+                  class="icon-menu h3 text-white"></span></a></span>
+            <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
+              <ul class="site-menu main-menu js-clone-nav ml-auto ">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="extensions-naturelles.html" class="nav-link">Extensions Naturelles</a></li>
+                <li class="active"><a href="shampoings-soins.html" class="nav-link">Shampoings & Soins</a></li>
+                <li><a href="entretien.html" class="nav-link">Entretien</a></li>
+                <li><a href="photos.html" class="nav-link">Photos Avant Après</a></li>
+                <li><a href="prestations-rdv.html" class="nav-link">Prestations & Rdv</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="ftco-blocks-cover-1">
+      <div class="site-section-cover overlay" data-stellar-background-ratio="0.5"
+        style="background-image: url('images/photo 2 entretenir les extensions.jpg')">
+        <div class="container">
+          <div class="row align-items-center justify-content-center text-center">
+            <div class="col-md-7">
+              <h1 class="mb-3">QUELS SHAMPOINGS UTILISER POUR LES
+                EXTENSIONS ?
+              </h1>
+              <p>Après avoir réalisé une pose d’extensions de cheveux, il est important d’appliquer une routine
+                particulière pour en prendre soin.
+              </p>
+              <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
+                  vous</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="site-section">
+      <div class="container">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-7 text-center">
+            <h3 class="scissors text-center">POURQUOI CHOISIR UN BON SHAMPOING ?
+            </h3>
+            <p class="mb-5 lead">Il est conseillé d’appliquer des shampoings spécifiques pour les extensions de cheveux
+              naturels. Cela permet d’augmenter la durée de vie de vos extensions.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END section -->
+    <div class="site-section bg-light">
+      <div class="container">
+        <div class="row justify-content-center  mb-5">
+          <div class="col-md-7 text-center">
+            <h3 class="scissors text-center">QUEL SHAMPOING UTILISER ?</h3>
+            <p class="mb-5 lead">Les shampoings pour extensions de cheveux sont des shampoings neutres, ne contenant
+              aucune molécule qui abîme les cheveux. Généralement, les shampoings pour extensions sont très doux car ils
+              ne contiennent pas de silicone, ni de glycérine ou tous autres produits chimiques qui détruisent les
+              cheveux.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12"></div>
+        </div>
+      </div>
+    </div>
+    <div class="site-section section-3" data-stellar-background-ratio="0.5"
+      style="background-image: url('images/photo 3 quels shampoings.jpg');">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col-10 text-center mb-5">
+            <h2 class="text-white scissors primary-color-icon text-center">COMMENT PRENDRE SOIN DE SES EXTENSIONS ?</h2>
+            <p class="lead text-white mb-5">Il est recommandé d’utiliser un après-shampoing ainsi que des soins
+              capillaires pour nourrir vos extensions. Dans l’idéal, il faudrait même utiliser des masques et sérum pour
+              préserver vos extensions au maximum.
+            </p>
+            <p><a href="https://calendly.com/rextense-contact" target="blank" class="btn btn-primary">Prenez rendez
+                vous</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-7 text-center">
+        <h3 class="scissors text-center">CONCLUSION</h3>
+        <p class="mb-5 lead">Le choix du shampoing est une étape nécessaire pour prendre soin de vos extensions
+          capillaires et garder leur éclat durablement. <br>
+          Pensez également à entretenir vos extensions avec des soins, masques, huiles et sérum au minimum une fois par
+          semaine.
+        </p>
+      </div>
+    </div>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <img src="images/Sam.jpg" alt="Image" class="img-fluid mb-5">
+            <h2 class="footer-heading mb-3">A propos de moi</h2>
+            <p>Technicienne spécialiste des extensions de cheveux à froid.
+              je mets mon expertise à votre service sur Gargenville et les communes limitrophes à mon domicile ou
+              directement chez vous.
+            </p>
+          </div>
+          <div class="col-lg-8 ml-auto">
+            <div class="row">
+              <div class="col-lg-6 ml-auto">
+                <h2 class="footer-heading mb-4">Liens</h2>
+                <ul class="list-unstyled">
+                  <li><a href="prestations-rdv.html">Contactez moi</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+  </footer>
+  </div>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.0.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/jquery.waypoints.min.js"></script>
+  <script src="js/jquery.animateNumber.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
+</html>
