--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
   <meta property="og:site_name" content="Rextense">
   <meta property="og:url" content="https://rextense.com/" />
   <meta property="og:image" content="https://rextense.com/" />
-  <meta property="og:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux - Rextense">
-  <meta property="og:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
+  <meta property="og:title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux - Rextense">
+  <meta property="og:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !">
 
-  <meta name="title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
+  <meta name="title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
   <meta name="og:description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="description"
     content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux. Les extensions capillaires vous font rêver, n’hésitez pas !" />
   <meta name="robots" content="index,follow" />
-  <meta name="twitter:title" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
-  <meta name="twitter:description" content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
+  <meta name="twitter:title"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
+  <meta name="twitter:description"
+    content="Spécialiste des extensions de cheveux 100% Naturels ! Pose sur mesure d’extensions à froid non dommageable pour vos cheveux.">
 
 
 
@@ -56,7 +61,7 @@
     </div>
     <header class="site-navbar site-navbar-target" role="banner">
       <div class="container">
-        
+
         <div class="row align-items-center position-relative">
           <div class="col-3 ">
             <div class="site-logo">
@@ -95,7 +100,7 @@
 
           </picture>
         </figure> -->
-        
+
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
             <div class="col-md-10">
@@ -314,8 +319,85 @@
         </div>
       </div>
     </div>
+
+
+
+
     <footer class="site-footer">
       <div class="container">
+        <div class="row">
+          <div class="col-lg-12 mb-3">
+            <h2 class="footer-heading mb-4">Zones d'intervention</h2>
+            <div class="villes">
+              <div class="ville-groupe">
+                <div class="ville-groupe">
+                  <ul class="list-unstyled">
+                    <li>Aincourt</li>
+                    <li>Alluets Le Roi</li>
+                    <li>Aubergenville</li>
+                    <li>Aulnay sur Mauldre</li>
+                    <li>Auffreville-Brasseuil</li>
+                    <li>Arnouville les Mantes</li>
+                    <li>Bazemont</li>
+                    <li>Boinville en Mantois</li>
+                    <li>Bouafle</li>
+                    <li>Breuil Bois Robert</li>
+                    <li>Breuil en Vexin</li>
+                    <li>Buchelay</li>
+                  </ul>
+                </div>
+                <div class="ville-groupe">
+                  <ul class="list-unstyled">
+                    <li>Chambourcy</li>
+                    <li>Drocourt</li>
+                    <li>Epone</li>
+                    <li>Ecquevilly</li>
+                    <li>Follainville-Dennemont</li>
+                    <li>Fontenay saint Pere</li>
+                    <li>Gargenville</li>
+                    <li>Goussonville</li>
+                    <li>Guerville</li>
+                    <li>Guitrancourt</li>
+                    <li>Issou</li>
+                    <li>Jambville</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="ville-groupe">
+                <div class="ville-groupe">
+                  <ul class="list-unstyled">
+                    <li>Jumeauville</li>
+                    <li>Lainville en Vexin</li>
+                    <li>La Falaise</li>
+                    <li>Limay</li>
+                    <li>Magnanville</li>
+                    <li>Mantes la Jolie</li>
+                    <li>Mantes la Ville</li>
+                    <li>Maule</li>
+                    <li>Meulan</li>
+                    <li>Mézieres sur Seine</li>
+                    <li>Montalet le bois</li>
+                  </ul>
+                </div>
+                <div class="ville-groupe">
+                  <ul class="list-unstyled">
+                    <li>Morainvilliers</li>
+                    <li>Nézel</li>
+                    <li>Oinville sur Montcient</li>
+                    <li>Orgeval</li>
+                    <li>Poissy</li>
+                    <li>Porcheville</li>
+                    <li>Rosny sur Seine</li>
+                    <li>Sailly</li>
+                    <li>Saint Martin la Garenne</li>
+                    <li>Triel sur Seine</li>
+                    <li>Vaux sur Seine </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row">
           <div class="col-lg-3">
             <img src="images/Sam.jpg" alt="Image owner" class="img-fluid mb-5">
@@ -325,40 +407,45 @@
               directement chez vous.
             </p>
           </div>
+
           <div class="col-lg-8 ml-auto">
             <div class="row">
               <div class="col-lg-6 ml-auto">
                 <h2 class="footer-heading mb-4">Liens</h2>
                 <ul class="list-unstyled">
                   <li><a href="prestations-rdv.html">Contactez moi</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Testimonials</a></li>
+                  <li><a href="#">Terms of Service</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Contact Us</a></li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-      </div>
     </footer>
 
 
     <script>
       function loadText() {
         alert(`
-                         Mesures COVID-19 
+Mesures COVID-19 
 
-        . Port du masque obligatoire(non fournis)
+. Port du masque obligatoire(non fournis)
 
-        . Respect des horaires de RDV pour éviter l'attente
+. Respect des horaires de RDV pour éviter l'attente
 
-        . Ne pas venir accompagnér
+. Ne pas venir accompagnér
 
-        . Les mesures barrières et sanitaires seront respectées
+. Les mesures barrières et sanitaires seront respectées
 
-        . Les protocoles de soins et techniques peuvent être long,
-          pensez à prévoir le temps nécessaire,
-          n'ayez aucune contrainte horaire afin de garantir 
-          un résultat optimal `);
+. Les protocoles de soins et techniques peuvent être long,
+  pensez à prévoir le temps nécessaire,
+  n'ayez aucune contrainte horaire afin de garantir 
+  un résultat optimal `);
       }
-      </script>
+    </script>
 
 
     <script src="js/jquery-3.3.1.min.js"></script>
